src/Surfnet/StepupMiddleware/ManagementBundle/Tests/Validator/Fixtures/invalid_configuration/not_array_sraa.php
<?php

return [
    'expectedError' => 'Property sraa must have an array of name_ids (string) as value',
    'expectedPropertyPath' => 'sraa',
    'configuration' => [
        'gateway' => [],
        'raa' => [],
        'sraa' => null,
        'email_templates' => [],
    ]
];
